Prevent margin-collapse in cards using flow-root

--- a/card.scss
+++ b/card.scss
@@ -1,6 +1,7 @@
 @import "_variables";
 card {
     display: block;
+    display: flow-root;
     height: auto;
     border-radius: 2px;
     background-color: white;
